--- a/k8s/kind-cluster.yaml
+++ b/k8s/kind-cluster.yaml
@@ -25,23 +25,23 @@ nodes:
       taints:
       - key: node-role.kubernetes.io/postgres
         effect: NoSchedule
-- role: worker
-  labels:
-    postgres.node.kubernetes.io:
-  kubeadmConfigPatches:
-  - |
-    kind: JoinConfiguration
-    nodeRegistration:
-      taints:
-      - key: node-role.kubernetes.io/postgres
-        effect: NoSchedule
-- role: worker
-  labels:
-    postgres.node.kubernetes.io:
-  kubeadmConfigPatches:
-  - |
-    kind: JoinConfiguration
-    nodeRegistration:
-      taints:
-      - key: node-role.kubernetes.io/postgres
-        effect: NoSchedule
+# - role: worker
+#   labels:
+#     postgres.node.kubernetes.io:
+#   kubeadmConfigPatches:
+#   - |
+#     kind: JoinConfiguration
+#     nodeRegistration:
+#       taints:
+#       - key: node-role.kubernetes.io/postgres
+#         effect: NoSchedule
+# - role: worker
+#   labels:
+#     postgres.node.kubernetes.io:
+#   kubeadmConfigPatches:
+#   - |
+#     kind: JoinConfiguration
+#     nodeRegistration:
+#       taints:
+#       - key: node-role.kubernetes.io/postgres
+#         effect: NoSchedule
